--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/rahularorar95/task-api#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
