--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-minimal-pie-chart": "^8.1.0",
     "react-router-dom": "^5.2.0",
